# REeve

./: .gitignore  PLAN.md  README.md  pyproject.toml  setup.sh
reeve/: __main__.py
reeve/analysis/: cfg.py  components.py  imports.py  normalizer.py  signatures.py  strings.py  types.py
reeve/core/: events.py  hypothesis.py  knowledge_graph.py  session.py
reeve/evals/: __init__.py  harness.py  metrics.py
reeve/host/: base.py  ghidra.py
reeve/knowledge_base/: __init__.py  builder.py
reeve/llm/: __init__.py  anthropic_client.py  base.py  reasoner.py  router.py  usage.py
reeve/planning/: __init__.py  executor.py  handlers.py  planner.py  tasks.py
reeve/signatures/: crypto.json  protocols.json  stdlib.json
reeve/tools/: __init__.py  annotations.py  base.py  database.py  decompiler.py  functions.py  gateway.py  navigation.py  strings.py  xrefs.py
reeve/ui/tui/: app.py
